--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -89,12 +89,13 @@ workflows:
   version: 2
   universal_login_all:
     jobs:
-      - test_ops
+      - lint
+      - test_commons
       - test_contracts
       - test_relayer
       - test_sdk
+      - test_ops
       - test_example
       - test_wallet
-      - lint
 
 
